# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  configuration.yml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230629095439_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  valid_email.rs  valid_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  main.rs  subscriptions.rs  test_utils.rs
tests/test_utils/: mod.rs
